[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprites/dialogue_box.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/PixelOperator.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/sprites/ui-patch.png" type="Texture" id=3]
[ext_resource path="res://assets/scripts/dialogue_manager.gd" type="Script" id=4]
[ext_resource path="res://assets/audio/maarte.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "close_dialogue"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/MainDiag/Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/MainDiag/NinePatchRect:margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -102.0, -9 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/MainDiag/NinePatchRect:margin_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 102.0, 9 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/MainDiag/NinePatchRect:margin_top")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -15.5, -5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/MainDiag/NinePatchRect:margin_bottom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 15.5, 5 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/Speaker:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CanvasLayer/MainDiag:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "open_dialogue"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/MainDiag/Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/MainDiag/NinePatchRect:margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -9, -102.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/MainDiag/NinePatchRect:margin_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 9, 102.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/MainDiag/NinePatchRect:margin_top")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -5, -15.5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/MainDiag/NinePatchRect:margin_bottom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5, 15.5 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/Speaker:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CanvasLayer/MainDiag:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="DialogueManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
diag_script = "res://scenes/dialogue/001_hallway.json"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainDiag" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -65.5
margin_top = -40.0
margin_right = 65.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/MainDiag"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -9.0
margin_top = -5.0
margin_right = 9.0
margin_bottom = 5.0
texture = ExtResource( 1 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/MainDiag"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.0
margin_top = -11.0
margin_right = 97.0
margin_bottom = 11.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Lorem Ipsum Dolor Sit Amet Viritisium"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer/MainDiag/Label"]

[node name="Speaker" type="MarginContainer" parent="CanvasLayer"]
visible = false
margin_left = 32.0
margin_top = 102.0
margin_right = 61.0
margin_bottom = 113.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/Speaker"]
margin_right = 29.0
margin_bottom = 11.0
texture = ExtResource( 3 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Speaker"]
margin_right = 29.0
margin_bottom = 11.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/Speaker/CenterContainer"]
margin_left = 5.0
margin_right = 23.0
margin_bottom = 11.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Name"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="DialogueBlip" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource( 5 )
volume_db = -8.739
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/close_dialogue = SubResource( 4 )
anims/open_dialogue = SubResource( 3 )

[connection signal="tween_step" from="CanvasLayer/MainDiag/Label/Tween" to="." method="_on_Tween_tween_step"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
